@@ -610,6 +610,12 @@ mkfifo_or_skip_()
   fi
 }
 
+trap_sigpipe_or_skip_()
+{
+  (trap '' PIPE && yes | :) 2>&1 | grep -qF 'Broken pipe' ||
+    skip_ 'trapping SIGPIPE is not supported'
+}
+
 # Disable the current test if the working directory seems to have
 # the setgid bit set.
 skip_if_setgid_()
